Bug 449003 - I don't find math pi, use search in this program
Summary: I don't find math pi, use search in this program
Status: RESOLVED FIXED
Alias: None
Product: kcharselect
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-23 10:52 UTC by David Blbulyan
Modified: 2023-03-26 14:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
This is screenshot with bug demonstration (122.93 KB, image/png)
2022-01-23 10:52 UTC, David Blbulyan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Blbulyan 2022-01-23 10:52:25 UTC
Created attachment 145792 [details]
This is screenshot with bug demonstration

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
Notice, my version is 20.12.0, but I didn't find this version in version list

STEPS TO REPRODUCE
1. Write in search "pi" or "PI"
It didn't find
2. Write in search "greek small pi"
It find

OBSERVED RESULT
"PI" didn't find in case 1

EXPECTED RESULT
"PI" must be found

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Albert Astals Cid 2023-03-26 14:08:51 UTC
Git commit 087530bcba78ac3f8322c98ffe316114087b0c75 by Albert Astals Cid, on behalf of Luis Javier Merino Morán.
Committed on 26/03/2023 at 13:57.
Pushed by aacid into branch 'master'.

Allow searching 2-character strings

This got broken on commit 7b324d1c

M  +2    -0    src/kcharselectdata.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/commit/087530bcba78ac3f8322c98ffe316114087b0c75
Comment 2 Albert Astals Cid 2023-03-26 14:20:54 UTC
Git commit 4adb2c73d279d1a48b4691c4fbce2bcc0764b38e by Albert Astals Cid, on behalf of Luis Javier Merino Morán.
Committed on 26/03/2023 at 14:16.
Pushed by aacid into branch 'kf5'.

Allow searching 2-character strings

This got broken on commit 7b324d1c
(cherry picked from commit 087530bcba78ac3f8322c98ffe316114087b0c75)

M  +2    -0    src/kcharselectdata.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/commit/4adb2c73d279d1a48b4691c4fbce2bcc0764b38e