Allow searching 2-character strings

This got broken on commit 7b324d1c

BUG: 449003